<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainScreenActivity" >

    <ImageButton
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher2border"
        android:contentDescription="@string/startbutton"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/button1"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_checklist"
        android:contentDescription="@string/companychecklistbutton" />

    <Button
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_inspect"
        android:contentDescription="@string/quickinspectbutton" />

    <Button
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:contentDescription="@string/optionsbutton"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/upload"
        android:contentDescription="@string/uploadsbutton"
        android:background="@android:color/transparent"/>

</LinearLayout>
